feat: create endpoint to upload multiple images to a car
