# src/modules/cars/models/index.ts
@@ -1,3 +1,4 @@
 export * from './Car.model';
+export * from './CarImage.model';
 export * from './Category.model';
 export * from './Specification.model';
