# src/routes/cars.routes.ts
@@ -1,11 +1,16 @@
 import { Router } from 'express';
+import multer from 'multer';
 
 import {
   assignCarSpecificationsController,
   createCarController,
   listCarsController,
+  uploadCarImagesController,
 } from '@/cars/useCases';
+import { uploadConfig } from '~/config';
 import { ensureAdmin, ensureAuth } from '~/middlewares';
+
+const uploadMiddleware = multer(uploadConfig.prefixed(process.env.STORAGE_CAR_IMAGES_PATH));
 
 export const carsRoutes = Router();
 
@@ -16,4 +21,11 @@ carsRoutes.patch(
   ensureAuth(),
   ensureAdmin(),
   assignCarSpecificationsController.handle
+);
+carsRoutes.patch(
+  '/cars/:carId/images',
+  ensureAuth(),
+  ensureAdmin(),
+  uploadMiddleware.array('file'),
+  uploadCarImagesController.handle
 );
